<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    android:layoutDirection="locale"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="?attr/colorPrimary"
        app:srcCompat="@drawable/ic_close_black_24dp"
        app:tint="?attr/colorControlNormal"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.card.MaterialCardView


        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-18dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient">

                    <TextView
                        android:id="@+id/setup_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/app_settings"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.501"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/language_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/language"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/setup_text" />


                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="46dp"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/language_text" />

                    <RadioGroup
                        android:id="@+id/location_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/location_text"
                        app:layout_constraintTop_toBottomOf="@id/language_radio_group">

                        <RadioButton
                            android:id="@+id/gps_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:buttonTint="@color/white"
                            android:text="@string/gps"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/map_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:buttonTint="@color/white"
                            android:text="@string/map"
                            android:textColor="@color/white" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/language_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/language_text"
                        app:layout_constraintTop_toBottomOf="@+id/setup_text">

                        <RadioButton
                            android:id="@+id/english_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:buttonTint="@color/white"
                            android:text="@string/english"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/arabic_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:buttonTint="@color/white"
                            android:text="@string/arabic"
                            android:textColor="@color/white" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/current_temp_text"
                        android:layout_width="81dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/temperature"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/location_radio_group" />

                    <RadioGroup
                        android:id="@+id/temp_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/current_temp_text">

                        <RadioButton
                            android:id="@+id/kelvin_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/white"
                            android:text="@string/kelvin"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/celsius_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:buttonTint="@color/white"
                            android:text="@string/celsius"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/fehrenheit_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:buttonTint="@color/white"
                            android:text="@string/fehrenheit"
                            android:textColor="@color/white" />
                    </RadioGroup>
up>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>