<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    android:layoutDirection="locale"
    android:orientation="vertical">





                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConstraintLayout_background"
                    android:layout_width="match_parent"
                    android:paddingVertical="20dp"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:drawableStart="@drawable/baseline_settings"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/app_settings"
                        android:textSize="36sp"
                        android:id="@+id/setting_text"
                        />



                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/card_lang"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="50dp"
                        app:layout_constraintTop_toBottomOf="@id/setting_text"
                        app:layout_constraintStart_toStartOf="parent"
                        >
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:padding="20dp"
                            >
                            <TextView
                                android:id="@+id/language_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/language"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                />
                            <RadioGroup
                                android:id="@+id/language_radio_group"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintTop_toBottomOf="@id/language_text"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="@id/language_text"
                                >

                                <RadioButton
                                    android:id="@+id/english_radio_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="15dp"
                                    android:checked="false"
                                    android:text="@string/english"
                                    />

                                <RadioButton
                                    android:id="@+id/arabic_radio_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:text="@string/arabic"
                                    />
                            </RadioGroup>

                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_lang"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="50dp"
                        android:id="@+id/card_loc"
                android:layout_marginTop="20dp"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_marginEnd="20dp"

                    >
                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/location"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <RadioGroup
                        android:id="@+id/location_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/location_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/location_text"
                        >

                        <RadioButton
                            android:id="@+id/gps_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:text="@string/gps"
                            />

                        <RadioButton
                            android:id="@+id/map_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:text="@string/map"
                            />
                    </RadioGroup>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/card_loc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                        app:cardCornerRadius="50dp"
                android:id="@+id/card_alert"
                android:layout_marginTop="20dp"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_marginEnd="20dp"

                    >
                    <TextView
                        android:id="@+id/location_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/alert"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <RadioGroup
                        android:id="@+id/alert_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="@id/location_text2"
                        app:layout_constraintTop_toBottomOf="@id/location_text2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        >

                        <RadioButton
                            android:id="@+id/alert_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:text="@string/alarm"
                            />

                        <RadioButton
                            android:id="@+id/notification_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:text="@string/notification"
                            />
                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/card_alert"
                app:layout_constraintStart_toStartOf="parent"
                        app:cardCornerRadius="50dp"
                android:id="@+id/card_temp"
                android:layout_marginTop="20dp"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_marginEnd="20dp"
                    >
                    <TextView
                        android:id="@+id/current_temp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                    <RadioGroup
                        android:id="@+id/temp_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/current_temp_text">

                        <RadioButton
                            android:id="@+id/kelvin_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/kelvin"
                            />

                        <RadioButton
                            android:id="@+id/celsius_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/celsius"
                            />

                        <RadioButton
                            android:id="@+id/fehrenheit_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/fehrenheit"
                            />
                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


                </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>